--- a/HeriTours_4.0.csproj
+++ b/HeriTours_4.0.csproj
@@ -73,6 +73,7 @@
     <Content Include="css\MapStyle.css" />
     <Content Include="History.aspx" />
     <Content Include="Index.aspx" />
+    <Content Include="js\ArcGISMap.js" />
     <Content Include="js\GoogleMap.js" />
     <Content Include="js\SelectionFunctions.js" />
     <Content Include="MapPage.aspx" />
